<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="30dp"
    android:id="@+id/page"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gif"
            />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/error_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/error_btn"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintTop_toBottomOf="@id/error_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/img"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="@id/img"
            app:layout_constraintVertical_bias="1"
            android:textSize="30sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/gradient_shape"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>